--- a/hello_world_tensor_flow.ipynb
+++ b/hello_world_tensor_flow.ipynb
@@ -6,7 +6,7 @@
       "name": "tensor_flow.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/swapon15/machine_learning/blob/master/hello_world_tensor_flow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "metadata": {
         "id": "rMvzQa9NWFNK",
@@ -43,7 +33,8 @@
       },
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense, Activation\n",
         "import numpy as np"
       ],
       "execution_count": 0,
@@ -63,20 +54,20 @@
       "metadata": {
         "id": "ITgtMtsMNQ0B",
         "colab_type": "code",
+        "outputId": "1f7d039f-0c1c-4093-e89d-6a6854b17353",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "a19dcc76-28df-4b3c-f190-1b2d4f718dda"
+        }
       },
       "cell_type": "code",
       "source": [
-        "celcius = np.array([25, 30, 33, 35, 40, 180],dtype=float)\n",
-        "farenheight = np.array([77, 86, 91.4, 95, 104, 356] ,dtype=float)\n",
-        "for i, cel in enumerate(celcius):\n",
-        "  print('{} degree celcius = {} degree farenheight'.format(cel, farenheight[i]))"
+        "data = np.array([25, 30, 33, 35, 40, 180],dtype=float)\n",
+        "labels = np.array([77, 86, 91.4, 95, 104, 356] ,dtype=float)\n",
+        "for i, cel in enumerate(data):\n",
+        "  print('{} degree celcius = {} degree farenheight'.format(cel, labels[i]))"
       ],
-      "execution_count": 36,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,9 +101,15 @@
       },
       "cell_type": "code",
       "source": [
-        "model = tf.keras.Sequential([tf.keras.layers.Dense(units=1, input_shape=[1])])\n",
-        "model.compile(optimizer=tf.keras.optimizers.Adam(0.1), loss='mean_squared_error')\n",
-        "history = model.fit(celcius, farenheight, epochs=500, verbose=False)"
+        "model = Sequential([\n",
+        "                   Dense(units=1, input_shape=(1,)),\n",
+        "                   Activation('softmax'),\n",
+        "                   ])\n",
+        "\n",
+        "model.compile(optimizer='rmsprop',\n",
+        "              loss='mse'\n",
+        "             )\n",
+        "history = model.fit(data, lable, epochs=10, verbose=False)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -131,11 +128,11 @@
       "metadata": {
         "id": "O4RkI0ikSV7j",
         "colab_type": "code",
+        "outputId": "b429e901-f8c2-444c-9719-8ee24836d402",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 378
-        },
-        "outputId": "b429e901-f8c2-444c-9719-8ee24836d402"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -144,7 +141,7 @@
         "plt.ylabel('Error')\n",
         "plt.plot(history.history['loss'])\n"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -186,11 +183,11 @@
       "metadata": {
         "id": "-IBSl0JCUON7",
         "colab_type": "code",
+        "outputId": "20c4ca72-0dc7-4554-e9a3-0095958c7fa4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "20c4ca72-0dc7-4554-e9a3-0095958c7fa4"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -199,7 +196,7 @@
         "for t in test:\n",
         "  print(model.predict([t]))"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
